Update B_co screen
Updated B_co screen.

--- a/master/website/board/templates/board/b_bizpartner.html
+++ b/master/website/board/templates/board/b_bizpartner.html
@@ -372,7 +372,7 @@
 
         function delete_element(elem) {
 
-            var id = elem.getAttribute('id');
+            var id = elem.getAttribute('value');
 
             var strurl = "bizpartner_element_delete?id=" + id;
             //alert(strurl);
